# sarcomaAI-gui

./: .gitignore  FDE_REPORT.md  May 7 Team Meeting Notes.md  README.md  TECHNICAL_REPORT.md  USER-INSTRUCTIONS.md  User-Instruction.md  build_app.bat  build_app.sh  generate_ico.py  pyproject.toml  sarcomaai.icns  sarcomaai.spec
backend/: App.py  Pipfile  db.py
documentation/: FDE_REPORT.md  LOGS.md  SYSTEM_DESIGN.md
frontend/: README.md  craco.config.js  package-lock.json  package.json
frontend/src/: App.js  GUI.js  index.css
frontend/src/components/: DatasetWizard.js  DicomViewer.jsx  ImportStep.jsx  MainLayout.jsx  PatientSidebar.jsx  PipelineStatus.jsx  SeriesInfoPanel.jsx  SetupWizard.jsx  T1T2Selector.jsx  TopBar.jsx
frontend/src/components/ui/: button.js  card.js  scroll-area.js  slider.js
frontend/src/context/: AppContext.js
frontend/src/utils/: initCornerstone.js
python_pipeline/: config.py  constants.py  csv_utils.py  demo.ipynb  ledger.py  models.py  pipeline.py  pipeline_new.py  runtime_config.json  series_select.py
python_pipeline/anonymization_fields/: sensitive_fields.json
python_pipeline/dicom/: dicom_anonymize.py  dicom_audit.py  dicom_copy.py  dicom_tags.py  dicom_utils.py
python_pipeline/imaging/: imaging_io.py  imaging_normalize.py  imaging_utils.py
sarcomaai_workspace/: .selections.csv  sarcomaai.db
sarcomaai_workspace/NEW_DICOMS/PA000001/ST000001/SE000001/: IM000001  IM000002  IM000003  IM000004  IM000005  IM000006  IM000007  IM000008  IM000009  IM000010  (+20 more)
tests/: conftest.py  test_anonymize.py  test_audit.py  test_ledger.py
(+822 files in other folders)
