# pyproject.toml
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sts-pipeline"
version = "0.1.0"
description = "Crash‑tolerant DICOM → NIfTI pipeline with pyCERR support"
requires-python = ">=3.11"

# Core runtime dependencies
dependencies = [
    "pyCERR[napari] @ git+https://github.com/cerr/pyCERR"
]